# lama_secours

./: .gitignore  G1_GVE.json  README.md  pyproject.toml
app/: display_shift_as_web.py  flask_modules.py  lama_secours.py  model.py  output.py  shift.py  zip.py
notebooks/: G1_GVE.csv  columns  json.ipynb  pdf.ipynb  read_shifts.ipynb  read_shifts_from_all.ipynb
shift-definitions/: A1.ZUE.test_11-12-2023_14-37-34.json  A2_GVE_05-12-2023_15-09-37.json  A4_GVE_05-12-2023_15-10-14.json  G1_GVE_22-12-2023_08-29-53.json  G1_ZUE_11-12-2023_16-44-03.json  G3_GVE_05-12-2023_15-02-25.json  G4_GVE_05-12-2023_15-03-57.json  O1_GVE_06-12-2023_08-40-35.json  ZUE-Test_15-11-2023_16-11-11.json  gve-00-12_07-11-2023_17-07-14.json  gve-12-00_07-11-2023_17-13-47.json
